ChangeLog for ffmpeg-php (ffmpeg-php.sourceforge.net)

version 0.9.0 (6/19/2018)
   Changes:
   * Updated with PHP 7.2 support (contributed by dward)

version 0.8.0 (11/16/2017)
   Changes:
   * Modified to compile and work with FFMPEG 3.4.0 (#1)
   * Updated README documentation

version 0.7.0 (09/22/2014)
	New Features:
	* Support for new INI directive: ffmpeg.max_alloc=<bytes> to set a
	  memory cap on the usage of FFMPEG
	* Support for new INI directive: ffmpeg.threads=<threads> to set the
	  maximum number of threads that can be used by FFMPEG
	* Made compatible with PHP 5.4
	* Made compatible with FFMPEG 1.2.4

	Bug Fixes:
	* Fixed issue with config.m4 and alternate libdir

version 0.6.0 (10/15/2008)
    New Features:
    * Support for ffmpeg swscale API

    API Changes:
    * Removed obsolete resize() and crop() functions. These operations are
      more flexibly done using the gd commands.
    * Removed animated gif class since it was way out of date and the 
      quality of animated gifs created by ffmpeg sucks anyway

    Bug Fixes:
    * Added check to ensure that gd loads before ffmpeg-php if both are
      compiled as extensions.
    * Replaced large mp3 test file with smaller sample to avoid copyright
      issues and reduce package size.
    * Convert from deprecated img_* functions to swscale.
    * Builds against php4 correctly again.

version 0.5.3 (05/30/2008)
    New Features:
    * Added 'ffmpeg.show_warnings' ini flag to control whether ffmpeg 
      warnings are converted to php warnings.
    * Applied patch to add getAudioStreamId and getVideoStreamId functions 

version 0.5.2.1 (04/03/2008)

    Bug Fixes:
    * Minor build fixes and cleanups

version 0.5.2 (04/02/2008)

    Bug Fixes:
    * ffmpeg-php should compile on macos-x now
    * Failure to find the proper codec is not a fatal error anymore
    * Updated build script to deal with new ffmpeg include file layout.

    
    New Features:
    * Added gd image bounds checking.