@@ -10,5 +10,5 @@ printf("ffmpeg getDuration(): %0.2f\n", $mov->getDuration());
 printf("ffmpeg getDuration(): %0.2f\n", $mov2->getDuration());
 ?>
 --EXPECT--
-ffmpeg getDuration(): 9.60
-ffmpeg getDuration(): 9.60
+ffmpeg getDuration(): 9.64
+ffmpeg getDuration(): 9.64
