@@ -3,6 +3,8 @@ ChangeLog for ffmpeg-php (ffmpeg-php.sourceforge.net)
 version 0.9.0 (6/19/2018)
    Changes:
    * Updated with PHP 7.2 support (contributed by dward)
+   * Fixed unit tests. Made getAuthor() check 'artist' and getYear()
+     check 'date' metadata fields
 
 version 0.8.0 (11/16/2017)
    Changes:
